--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
       - name: Denostuff
         id: deno
         uses: mborejdo/action-rusty@refs/heads/master
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
           mode: 'deno run -A --quiet ./index.ts'
           cli: ''
